kde4libs (4:3.95.0-1) experimental; urgency=low

  * New upstream release: KDE4 beta 4.

  +++ Changes by Fathi Boudra:

  * Remove libpulse0 conflict. It was a temporary workaround.

  +++ Changes by Armin Berres:

  * Lower the dependency on kde-icons-oxygen to a recommends. Otherwise we
    have a circular dependency when building the packages.
  * Update *.install files.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 25 Oct 2007 14:47:24 +0200

kde4libs (4:3.94.0-2) experimental; urgency=low

  +++ Changes by Fathi Boudra:

  * Pull SVN branch to r726725.

  +++ Changes by Armin Berres:

  * Add debug package.
  * Make kdelibs5-dev depend on recent soprano.
  * Add dependency of kdelibs5 on kde-icons-oxygen. It is needed by nearly
    every KDE4 application.

  +++ Changes by Ana Beatriz Guerrero Lopez:
  
  * Update *.install files.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 18 Oct 2007 20:56:22 +0200

kde4libs (4:3.94.0-1) experimental; urgency=low

  * KDE4 beta3.

  +++ Changes by Armin Berres:

  * Add kdelibs5 dependency on shared-mime-info.
  * Update *.install files.
  * Install man pages.
  * Rename debian/no-install.txt to debian/not-installed and reformat it for
    being usable with "debian/rules list-missing".
  * Update patches.
  * Depend on up to date libsoprano.
  * Conflict with libpulse0 for preventing crashes. This is definitely just a
    temporary workaround and should be removed ASAP.
  * Depend on hal which is used as Solid backend.
  * Depend on pmount.

  +++ Changes by Sune Vuorela:

  * kjscmd also exists in kjscmd from kdebindings. Adding conflict.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 17 Oct 2007 13:42:50 +0200

kde4libs (4:3.93.0-1) experimental; urgency=low

  * New upstream version.
   - Remove patches: 01_libkdeprint_management_soname and
     02_strigi-0.5.5_support merged upstream. And 12_no_emoticon is not
     longer needed.