@@ -12,6 +12,10 @@ kde4libs (4:3.95.0-1) experimental; urgency=low
     have a circular dependency when building the packages.
   * Update *.install files.
 
+  +++ Changes by Sune Vuorela:
+
+  * Leet shlibs hacking
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 25 Oct 2007 14:47:24 +0200
 
 kde4libs (4:3.94.0-2) experimental; urgency=low
